- small formatting change for the table that shows when hovering over the partition details statistics - fixed: codeBox should be inline block with 'pre-wrap' white-space behaviour since we rely on it displaying whatever is inside accurately (ie displaying all kinds of 'raw' data)

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -351,13 +351,16 @@ span>.icon-container~span {
 }
 
 .codeBox {
+    display: inline-block;
     margin: 0;
-    padding: 0.2em 0.4em 0.1em;
+    padding: 0em 0.4em 0em;
+    white-space: pre-wrap;
     font-size: 85%;
+    font-family: monospace;
+
     background: rgb(241, 241, 241);
     border: 1px solid rgba(0, 0, 0, 0.06);
     border-radius: 3px;
-    font-family: monospace;
 }
 
 .version {
@@ -887,9 +890,21 @@ svg {
     margin: auto;
 }
 
-.ant-popover-content {
-    /* popover is too hard to see on white background */
-    box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.07);
+.ant-popover {
+    .ant-popover-content {
+        /* popover is too hard to see on white background */
+        box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.07);
+
+        .ant-popover-inner {
+            .ant-popover-title {
+                color: hsla(0deg, 0%, 0%, 0.75);
+            }
+
+            .ant-popover-inner-content {
+                color: hsla(0deg, 0%, 0%, 0.75);
+            }
+        }
+    }
 }
 
 .ant-progress-status-active .ant-progress-bg::before {
@@ -1389,7 +1404,6 @@ svg {
     }
 
     pre {
-        // margin-left: 12px;
         padding: 12px;
         font-family: monospace;
         font-size: 14px;
